# AvaTarArTs-Suite

./: .gitignore  AI_ANALYSIS_DATA_20251101_031410.json  AI_ANALYSIS_DATA_20251101_032823.json  AI_ANALYSIS_DATA_20251101_043417.json  AI_ANALYSIS_REPORT_20251101_031410.md  AI_ANALYSIS_REPORT_20251101_032823.md  AI_ANALYSIS_REPORT_20251101_043417.md  CONSOLIDATION_COMPLETE.md  DEDUPLICATION_COMPLETE.md  DEDUP_DATA_20251101_032123.json  DEDUP_DATA_20251101_032139.json  DEDUP_REPORT_20251101_032123.md  DEDUP_REPORT_20251101_032139.md  FOLDER_STRUCTURE_ANALYSIS_20251101_031637.md  FOLDER_STRUCTURE_DATA_20251101_031637.json  QUICKSTART.md  README.md  UNDO_DEDUP_20251101_032139.sh  analysis_report.json  load_env.sh  requirements.txt
archived/: README.md
data/: README.md
devtools/: README.md  advanced_quality_enhancer.py  advanced_quality_improver.py  batch_quality_improver.py  (+8 more)
devtools/development_utilities/: __init__.py  api_env_setup.py  aws_uploader.py  backup_installations.py  base.py  base_uploader.py  before.py  before_sleep.py  bot.py  bot_archive.py  bot_delete.py  candidate.py  chardetect.py  clean_test.py  cleanup_conda_envs.sh  colors.py  config 3.py  config 5.py  config.py  config_20250430201601.py  config_20250430201604.py  console.py  convert_webm_to_mp3.sh  credentials.py  customerrors.py  deepseek_python_20250608130223.py  devices.py  duplicates-to-csv.sh  enums.py  exceptions.py  expand_prompts_by_style_20250530223226.py  ext.py  fdupes.py  filetypes.py  format_control.py  hash.py  help.py  inference_pipeline_api.py  installed.py  irc.py  (+46 more)
(+774 files in other folders)
