[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-repo"
version = "0.0.0"
description = "Local Python repository"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "black==24.*",
  "flake8==7.*",
  "ruff==0.6.*",
  "mypy==1.*",
  "pytest==8.*",
  "pytest-cov==5.*",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.(py|pyi)$"
exclude = "(^/)?(\\.venv|venv|\\.git|\\.mypy_cache|\\.ruff_cache|dist|build)/"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
strict_optional = true
no_implicit_optional = true
plugins = []
ignore_missing_imports = true
exclude = ["^tests/"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", ".git", "__pycache__", "dist", "build"]
